test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET_api_private_ipinfo_2.snaphost
HTTP/2.0 200 OK
Content-Length: 40
Content-Type: application/json
Date: Tue, 17 Jun 2025 13:32:53 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
X-Content-Type-Options: nosniff
X-Frame-Options: DENY
X-Java-Method: ApiPrivateIpInfoResource::getIpInfo
X-Java-Version: 17.0.14+7
X-Mongodb-Service-Version: gitHash=1ab676b47c305241bdf9a34bc95947dde225deff; versionString=master
X-Permitted-Cross-Domain-Policies: none
X-Xgen-Up-Proto: HTTP/2

{"currentIpv4Address":"172.206.111.193"}